# AI_Chatbot

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.agent/rules/: base.md
.github/workflows/: ci.yml  deploy-pages.yml
configs/: app.toml
demo/: app.js  index.html  kb_embeddings.json  style.css
docs/: architecture.md
scripts/: build_demo_assets.py  chat.py  serve.py
src/healthcare_assistant/: __init__.py  assistant.py  cli.py  config.py  db.py  embeddings.py  gemini_client.py  knowledge_base.py  prompts.py  retrieval.py  schemas.py  tools.py  webapp.py
src/healthcare_assistant/data/: knowledge_base.json
src/healthcare_assistant/web_static/: app.js  index.html  style.css
tests/: conftest.py  test_db.py  test_embeddings_cache.py  test_retrieval.py
